--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node --use_strict start.js &"
   },
   "keywords": [
+    "obyte",
     "byteball",
     "luckybytes",
     "lottery"
@@ -27,7 +28,7 @@
   "dependencies": {
     "superagent": "^3.6.1",
     "provable": "^0.2.2",
-    "byteballcore": "git+https://github.com/byteball/byteballcore.git",
+    "ocore": "git+https://github.com/byteball/ocore.git",
     "express": "^4.15.4",
     "bitcore-lib": "^0.13.14",
     "bitcore-mnemonic": "~1.0.0",
